@@ -111,6 +111,36 @@ class FC4_PartData(FC3_PartData):
 
         return retval
 
+class F9_PartData(FC3_PartData):
+    def __init__(self, active=False, primOnly=False, fsprofile=""
+                 end=0, fsopts="", fstype="", grow=False, label="",
+                 maxSizeMB=0, format=True, onbiosdisk="", disk="",
+                 onPart="", recommended=False, size=None, start=0,
+                 mountpoint=""):
+        FC3_PartData.__init__(self, active=active, primOnly=primOnly,
+                             end=end, fstype=fstype, grow=grow,
+                             maxSizeMB=maxSizeMB, format=format,
+                             onbiosdisk=onbiosdisk, disk=disk,
+                             onPart=onPart, size=size, start=start,
+                             recommended=recommended,
+                             mountpoint=mountpoint)
+        self.fsopts = fsopts
+        self.label = label
+        self.fsprofile = fsprofile
+
+    def _getArgsAsStr(self):
+        retval = FC3_PartData._getArgsAsStr(self)
+
+        if self.fsprofile != "":
+            retval += " --fsprofile=\"%s\"" % self.fsprofile
+        if self.fsopts != "":
+            retval += " --fsoptions=\"%s\"" % self.fsopts
+        if self.label != "":
+            retval += " --label=%s" % self.label
+
+        return retval
+
+
 class FC3_Partition(KickstartCommand):
     def __init__(self, writePriority=130, partitions=None):
         KickstartCommand.__init__(self, writePriority)
@@ -202,3 +232,27 @@ class FC4_Partition(FC3_Partition):
         op.add_option("--fsoptions", dest="fsopts")
         op.add_option("--label", dest="label")
         return op
+
+class F9_Partition(FC3_Partition):
+    def __init__(self, writePriority=130, partitions=None):
+        FC3_Partition.__init__(self, writePriority, partitions)
+
+        def part_cb (option, opt_str, value, parser):
+            if value.startswith("/dev/"):
+                parser.values.ensure_value(option.dest, value[5:])
+            else:
+                parser.values.ensure_value(option.dest, value)
+
+    def _setClassData(self):
+        self.dataType = F9_PartData
+
+    def _getParser(self):
+        op = FC3_Partition._getParser(self)
+        op.add_option("--fsprofile", dest="fsprofile", action="store",
+                      type="string", nargs=1)
+        op.add_option("--fsoptions", dest="fsopts")
+        op.add_option("--label", dest="label")
+        return op
+
+
+
