@@ -1,3 +1,11 @@
+2007-10-26  Peter Jones  <pjones@redhat.com>
+
+	* pykickstart/commands/logvol.py:  Add F9 options (--fsprofile).
+
+	* pykickstart/commands/raid.py: ditto.
+
+	* pykickstart/commands/partition.py: ditto.
+
 2007-10-25  Chris Lumens  <clumens@redhat.com>
 
 	* pykickstart/commands/logvol.py (FC4_LogVol._setClassData):  Fix
